--- a/style2.css
+++ b/style2.css
@@ -234,29 +234,55 @@ footer {
 
   /* MAP */
 
+  
+.mapSection {
+  font-family: "Audiowide", cursive;
+  margin: 30px;
+}
   #map {
     position: relative;
-    margin: 10px 10px 50px 10px;
+    margin: 10px 30px 120px 10px;
+    border-radius: 8px;
+    box-shadow: 5px 5px 20px black;
+  }
+
+  .allPopups {
+    height: 100%;
+    width: 100%;
   }
   
   /* Popup container */
   .popup {
     position: absolute;
     cursor: pointer;
-    font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    width: 130px;
+    height: 60px;
+    font-family: "Audiowide", cursive;
     font-weight: bold;
-    border: dotted 3px grey;
+    text-align: center;
+    box-shadow: 5px 5px 10px black;
+    border: solid 2px black;
     background-color: white;
     border-radius: 6px;
-    padding: 10px;
+    padding: 5px 5px 5px 5px;
+  }
+ 
+  .popup:hover {
+    transform: scale(1.2, 1.2);
   }
   
+  /* Fade in the pseudo-element with the bigger shadow */
+  .popup:hover:after {
+    opacity: 1;
+  }
+
   /* The actual popup */
   .popup .popuptext {
     visibility: hidden;
-    width: 140px;
-    height: 90px;
+    width: 150px;
+    height: 110px;
     font-weight: normal;
+    font-size: small;
     background-color: #FF72B8;
     color: #fff;
     border: solid black;
@@ -265,25 +291,26 @@ footer {
     padding: 10px;
     position: absolute;
     z-index: 1;
-    bottom: 180%;
-
-    margin-left: -150px;
-    
+    bottom: 120%;
+    left: 50%;
+    transform: translateX(-50%);    
   }
   
-  /* Popup arrow */
-  .popup .popuptext::after {
-    content: "";
-    position: absolute;
-    top: 100%;
-    left: 40%;
-    margin-left: -2px;
-    border-width: 30px;
-    border-style: solid;
-    border-color: #FF72B8 transparent transparent transparent;
-  }
+/* Popup arrow */
+.popup .popuptext::after {
+  content: "";
+  position: absolute;
+  top: 100%; /* Position the arrow below the popup */
+  left: 50%;
+  margin-left: -10px; 
+  border-left: 10px solid transparent;
+  border-right: 10px solid transparent;
+  border-top: 10px solid #000; 
+  border-radius: 6px 6px 0 0; /* Border radius to match the popup box */
+}
   
   /* Toggle this class - hide and show the popup */
   .popup .show {
     visibility: visible;
   }
+  
