--- a/styleFAQs.css
+++ b/styleFAQs.css
@@ -185,3 +185,205 @@ details[open] .control-icon-expand {
   border: none;
   border-color: none;
 }
+
+body {
+  background-image: linear-gradient(#ff66c4, #ffde59);
+  background-size: 100% 100%; /* Stretch the background color to cover the entire viewport */
+  background-repeat: no-repeat;
+}
+
+marquee {
+  font-family: "Audiowide", cursive;
+  background-color: black;
+  color: yellow;
+  position: fixed;
+  z-index: 2;
+}
+
+/* NAV BAR */
+
+.navBar {
+  display: flex;
+  justify-content: flex-end;
+  align-items: center; /* Vertically align content within the container */
+  padding: 10px;
+  font-family: "Bungee Shade";
+}
+
+.navBar a {
+  text-decoration: none;
+  color: #f6f6f6;
+  padding: 15px;
+  font-family: "Audiowide", cursive;
+}
+
+.navBar a:hover {
+  background-color: #ff66c4;
+  color: #f6f6f6;
+  padding: 12px 16px;
+  font-family: "Audiowide", cursive;
+}
+
+/* NAV BAR DROP DOWN */
+
+.dropdown {
+  border: none;
+}
+
+.nav-item {
+  position: relative;
+  display: inline-block;
+  padding: 15px;
+  font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
+  z-index: 100;
+}
+
+.dropdown-menu {
+  display: none;
+  position: absolute;
+  background-color: #ffde59;
+  color: #ff66c4;
+  min-width: 160px;
+  box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
+  z-index: 100;
+}
+
+.dropdown-menu a {
+  color: #ff66c4;
+  padding: 12px 16px;
+  text-decoration: none;
+  display: block;
+  z-index: 100;
+}
+
+.dropdown-menu a:hover {
+  background-color: #ff66c4;
+  color: #f6f6f6;
+  z-index: 100;
+  color: #ffde59;
+}
+
+.dropdown:hover .dropdown-menu {
+  display: block;
+  z-index: 100;
+}
+
+.dropdown:hover .dropdown {
+  background-color: #ff66c4;
+  color: white;
+  z-index: 100;
+}
+
+header {
+  font-family: "Audiowide", cursive;
+  display: flex;
+  justify-content: space-between;
+  padding-top: 2em;
+  padding-bottom: 15px;
+  padding-left: 10px;
+  z-index: 2;
+}
+
+/*navbar search function*/
+
+.searchBtn {
+  font-family: "Audiowide", cursive;
+  background-color: #ff66c4;
+  color: white;
+  box-shadow: rgba(74, 77, 77, 0.5) 0 2px 5px 0;
+  border-radius: 8px;
+  border: none;
+  border-color: none;
+}
+
+.searchBtn:hover {
+  background-color: #ffbd58;
+  color: #0e6880;
+  transition: ease-in-out;
+}
+
+/* search field*/
+.d-flex {
+  font-family: "Audiowide", cursive;
+}
+/* MAIN BODY */
+
+/* RESPONSIVE TO SMALLER SCREENS  */
+@media screen and (max-width: 768px) {
+  .grid-container {
+    grid-template-columns: 1fr; /* Use a single column for smaller screens */
+  }
+}
+/*FAQs image*/
+
+.campsiteImg {
+  max-width: 100%;
+}
+.container {
+  position: relative;
+}
+.text-block {
+  position: absolute;
+  bottom: 35%;
+  right: 35%;
+
+  color: white;
+  padding-left: 20px;
+  padding-right: 20px;
+}
+
+/* FOOTER */
+
+#Column1 {
+  color: white;
+  font-family: "Audiowide", cursive;
+  font-size: small;
+  width: 50%;
+  padding: 1em;
+}
+
+#Column1 li {
+  list-style-type: none;
+}
+
+#Column2 {
+  color: white;
+  font-family: "Audiowide", cursive;
+  width: 50%;
+  padding: 1em;
+  justify-content: space-between;
+  text-align: right; /* Align text to the right within Column2 */
+}
+
+#Column2 ul {
+  list-style-type: none;
+  padding: 0;
+  margin: 0;
+}
+
+#Column2 ul li {
+  display: inline-block; /* Make the list items side by side */
+  margin-right: 10px; /* Add some spacing between the list items */
+}
+
+.footer-text {
+  color: white;
+}
+
+.footer-text:hover {
+  color: black;
+}
+
+.social-link {
+  text-decoration: none; /* Remove underline */
+  color: white; /* Change the color to black */
+}
+
+/* Add hover styles to change the color on hover (optional) */
+.social-link:hover {
+  color: black; /* Change the color to red on hover */
+}
+
+footer {
+  background-color: #ff66c3;
+}
