--- a/Gallery.css
+++ b/Gallery.css
@@ -1,12 +1,25 @@
 .centered-carousel {
+    padding-top: 2em;
+    padding-bottom: 2em;
     max-width: 100%;
     margin: 0 auto;
   }
 
   .centered-carousel .carousel-inner .carousel-item img {
-    margin-top: 10em;
     width: 100%;
     height: 700px; /* Adjust the height to your preferred size */
     object-fit: cover; /* Maintain image aspect ratio */
     box-shadow: 500px 5px 15px rgba(0, 0, 0, 0.897); /* Customize the shadow as needed */
+  }
+  
+  .Gallery {
+    padding-top: 12em;
+    text-align: center;
+  }
+
+  .Year-Date{
+    text-align: center;
+    color: white;
+    font-family: "Audiowide", cursive;
+    font-size:x-large;
   }
