--- a/style2.css
+++ b/style2.css
@@ -2,7 +2,7 @@
 
 body {
   background: rgb(252,185,84);
-  background: linear-gradient(90deg, rgba(252,185,84,1) 5%, rgba(255,102,196,1) 16%, rgba(252,185,84,1) 71%, rgba(255,102,196,1) 94%);
+  background: linear-gradient(90deg, rgb(236, 161, 48) 5%, rgba(255,102,196,1) 16%,  rgb(236, 161, 48) 71%, rgba(255,102,196,1) 94%);
   background-size: 100% 100%;
   background-repeat: no-repeat;
 }
