--- a/styleFAQs.css
+++ b/styleFAQs.css
@@ -1,20 +1,27 @@
 .campsiteImg {
   margin-top: 60px;
   padding-bottom: 20px;
+  padding-top: 70px;
+  max-width: 100%;
 }
 
 body {
-  font-family: "IBM Plex Sans", sans-serif;
+  font-family: "Audiowide", cursive;
   background-color: rgba(0, 0, 0, 0.1);
 }
-
+h1 {
+  font-family: "Bungee Shade";
+}
 h2 {
   margin: 20px auto 80px;
-  font-size: 38px;
+  font-family: "Bungee Shade";
+
+  font-size: 50px;
   font-weight: 300;
   text-align: center;
   letter-spacing: 2px;
   line-height: 1.5;
+  color: white;
 }
 
 details {
@@ -48,6 +55,7 @@ details[open] {
     text-align: center;
     letter-spacing: 2px;
     line-height: 1.5;
+    font-family: "Bungee Shade";
   }
 
   details {
@@ -317,21 +325,22 @@ header {
 }
 /*FAQs image*/
 
-.campsiteImg {
-  max-width: 100%;
-}
 .container {
   position: relative;
 }
 .text-block {
+  display: inline-block;
+  text-align: center;
+  margin: 0;
+  padding: 250px 0 0 200px;
   position: absolute;
-  bottom: 35%;
-  right: 35%;
-
+  font-size: 25px;
+  width: auto;
+  height: auto;
   color: white;
-  padding-left: 20px;
-  padding-right: 20px;
 }
+
+
 
 /* FOOTER */
 
