--- a/stylemappage.css
+++ b/stylemappage.css
@@ -1,77 +1,98 @@
  /* MAP */
 
+ .mapContainer {
+  display: flex;
+  justify-content: center; /* Center horizontally */
+  align-items: center; /* Center vertically */
+  min-height: 100vh; /* Ensure the container takes up the full viewport height */
+  padding: 180px 10px 10px 10px;
+}
+
+.mapSection {
+  font-family: "Audiowide", cursive;
+  position: relative;
+}
+
+.mapFonts {
+  color: white;
+  text-align: center;
+}
+h1 {
+  font-family: "Bungee Shade";
+}
+
+#map {
+  position: relative;
+  margin: 30px 10px 10px 10px;
+  border-radius: 15px;
+  box-shadow: 0 0 0 7px black,
+  0 0 0 12px white,
+  0 0 0 13px black,
+  0 0 0 20px white,
+  0 0 0 27px black;
+}
   
- .mapSection {
-    font-family: "Audiowide", cursive;
-    margin: 30px;
-  }
-    #map {
-      position: relative;
-      margin: 10px 30px 120px 10px;
-      border-radius: 8px;
-      box-shadow: 5px 5px 20px black;
-    }
-  
-    .allPopups {
-      height: 100%;
-      width: 100%;
-    }
-    
-    /* Popup container */
-    .popup {
-      position: absolute;
-      cursor: pointer;
-      width: 130px;
-      height: 60px;
-      font-family: "Audiowide", cursive;
-      font-weight: bold;
-      text-align: center;
-      box-shadow: 5px 5px 10px black;
-      border: solid 2px black;
-      background-color: white;
-      border-radius: 6px;
-      padding: 5px 5px 5px 5px;
-    }
-   
-    .popup:hover {
-      transform: scale(1.2, 1.2);
-    }
-  
-    /* The actual popup */
-    .popup .popuptext {
-      visibility: hidden;
-      width: 150px;
-      height: 110px;
-      font-weight: normal;
-      font-size: small;
-      background-color: #FF72B8;
-      color: #fff;
-      border: solid black;
-      text-align: center;
-      border-radius: 6px;
-      padding: 10px;
-      position: absolute;
-      z-index: 1;
-      bottom: 120%;
-      left: 50%;
-      transform: translateX(-50%);    
-    }
-    
-  /* Popup arrow */
-  .popup .popuptext::after {
-    content: "";
-    position: absolute;
-    top: 100%; /* Position the arrow below the popup */
-    left: 50%;
-    margin-left: -10px; 
-    border-left: 10px solid transparent;
-    border-right: 10px solid transparent;
-    border-top: 10px solid #000; 
-    border-radius: 6px 6px 0 0; /* Border radius to match the popup box */
-  }
-    
-    /* Toggle this class - hide and show the popup */
-    .popup .show {
-      visibility: visible;
-    }
-    
+.allPopups {
+  height: 100%;
+  width: 100%;
+}
+
+.popup {
+  position: absolute;
+  cursor: pointer;
+  width: 130px;
+  height: 60px;
+  font-family: "Audiowide", cursive;
+  font-weight: bold;
+  text-align: center;
+  box-shadow: 5px 5px 10px black;
+  border: solid 2px black;
+  background-color: white;
+  border-radius: 6px;
+  padding: 5px 5px 5px 5px;
+  left: 50%; /* Position from the center horizontally */
+  top: 50%; /* Position from the center vertically */
+  transform: translate(-50%, -50%); /* Center the popup */
+}
+
+.popup:hover {
+  transform: translate(-50%, -50%) scale(1.2, 1.2);
+}
+
+/* The actual popup */
+.popup .popuptext {
+  visibility: hidden;
+  width: 150px;
+  height: 110px;
+  font-weight: normal;
+  font-size: small;
+  background-color: #FF72B8;
+  color: #fff;
+  border: solid black;
+  text-align: center;
+  border-radius: 6px;
+  padding: 10px;
+  position: absolute;
+  z-index: 1;
+  bottom: 120%;
+  left: 50%;
+  transform: translateX(-50%);    
+}
+
+/* Popup arrow */
+.popup .popuptext::after {
+content: "";
+position: absolute;
+top: 100%; /* Position the arrow below the popup */
+left: 50%;
+margin-left: -10px; 
+border-left: 10px solid transparent;
+border-right: 10px solid transparent;
+border-top: 10px solid #000; 
+border-radius: 6px 6px 0 0; /* Border radius to match the popup box */
+}
+
+/* Toggle this class - hide and show the popup */
+.popup .show {
+  visibility: visible;
+}
