--- a/stylemappage.css
+++ b/stylemappage.css
@@ -1,29 +1,36 @@
  /* MAP */
 
- .mapContainer {
+ .mapSection {
   display: flex;
   justify-content: center; /* Center horizontally */
-  align-items: center; /* Center vertically */
-  min-height: 100vh; /* Ensure the container takes up the full viewport height */
-  padding: 180px 10px 10px 10px;
+   /* min-height: 100vh; Ensure the container takes up the full viewport height */
+  padding: 180px 10px 50px 10px;
 }
 
-.mapSection {
-  font-family: "Audiowide", cursive;
+.mapContainer {
   position: relative;
 }
 
-.mapFonts {
-  color: white;
+.mapIntro {
   text-align: center;
 }
+
+p {
+  font-family: "Audiowide", cursive;
+}
+
 h1 {
   font-family: "Bungee Shade";
+  text-align: center;
+}
+
+h2 {
+  color: #FF72B8;
 }
 
 #map {
   position: relative;
-  margin: 30px 10px 10px 10px;
+  margin: 30px 10px 0px 10px;
   border-radius: 15px;
   box-shadow: 0 0 0 7px black,
   0 0 0 12px white,
@@ -31,7 +38,10 @@ h1 {
   0 0 0 20px white,
   0 0 0 27px black;
 }
-  
+.bold {
+  font-weight: bold;
+}
+
 .allPopups {
   height: 100%;
   width: 100%;
@@ -62,13 +72,13 @@ h1 {
 /* The actual popup */
 .popup .popuptext {
   visibility: hidden;
-  width: 150px;
+  width: 160px;
   height: 110px;
   font-weight: normal;
   font-size: small;
-  background-color: #FF72B8;
-  color: #fff;
-  border: solid black;
+  background-color: yellow;
+  color: black;
+  border: solid black 4px;
   text-align: center;
   border-radius: 6px;
   padding: 10px;
@@ -95,4 +105,73 @@ border-radius: 6px 6px 0 0; /* Border radius to match the popup box */
 /* Toggle this class - hide and show the popup */
 .popup .show {
   visibility: visible;
+}
+
+/* Stage info boxes */
+.stageSection1 {
+  justify-content: center;
+}
+
+.stageContainer1 {
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+}
+
+.stageSection2 {
+  justify-content: center;
+}
+
+.stageContainer2 {
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+}
+
+.newMusicSat, .newMusicSun {
+  width: 345px;
+  box-shadow: 5px 5px 10px black;
+  border: solid 3px black;
+  background-color: yellow;
+  color: black;
+  border-radius: 10px; 
+  font-family: "Audiowide", cursive;
+  padding: 20px;
+  margin: 10px;
+  position: relative;
+}
+
+.newMusicSat .bands,
+.newMusicSun .bands {
+  text-align: left;
+  font-weight: bold;
+}
+
+.newMusicSat .times,
+.newMusicSun .times {
+  text-align: right;
+}
+
+.headlineSat, .headlineSun {
+  width: 345px;
+  box-shadow: 5px 5px 10px black;
+  border: solid 3px black;
+  background-color: yellow;
+  color: black;
+  border-radius: 10px; 
+  font-family: "Audiowide", cursive;
+  padding: 20px;
+  margin: 10px;
+  position: relative;
+}
+
+.headlineSat .bands,
+.headlineSun .bands {
+  text-align: left;
+  font-weight: bold;
+}
+
+.headlineSat .times,
+.headlineSun .times {
+  text-align: right;
 }
