--- a/HomeStyle.css
+++ b/HomeStyle.css
@@ -19,12 +19,12 @@
 }
 
 .launch-time div {
-padding-left: 35px;
+padding-left: 1em;
 color:black;
 }
 
 .launch-time div p {
-font-size: 60px;
+font-size: 3vw;
 margin-bottom: -5px;
 font-family: "audiowide", cursive, bold;
 }
@@ -71,6 +71,7 @@ font-family: "audiowide", cursive, bold;
 }
 
 .Merch img {
+  max-width: 28%;
   margin: 2em;
   border-radius: 15px; 
   box-shadow: 0 0 0 7px black,
@@ -99,7 +100,7 @@ font-family: "audiowide", cursive, bold;
 
 .logos {  
   overflow: hidden;
-  padding: 60px 0;
+  padding: 4em 0;
   white-space: nowrap;
 }
 
