--- a/styleAboutUs.css
+++ b/styleAboutUs.css
@@ -1,207 +1,34 @@
-/* FULL PAGE DESIGN */
-
-body {
-  background: rgb(252,185,84);
-  background: linear-gradient(90deg, rgba(252,185,84,1) 5%, rgba(255,102,196,1) 16%, rgba(252,185,84,1) 71%, rgba(255,102,196,1) 94%);
-  background-size: 100% 100%;
-  background-repeat: no-repeat;
-}
-
-  marquee {
-    font-family: 'Audiowide', cursive;
-    background-color: black;
-    color: #ffde59;
-    position: fixed;
-    z-index: 0;
-  }
-
-  /* HEADER */
-
-  header {
-    background: #00000002;
-    font-family: 'Audiowide', cursive;
-    display: flex;
-    justify-content: space-between;
-    padding-top: 2em;
-    padding-bottom: 15px;
-    padding-left: 10px;
-    z-index: 1;
-    position: fixed;
-    width: 100%;
-    border-bottom: 1em;
-}
-
-/* NAV BAR */
-
-.navBar {
-  padding: 10px;
-  font-family: 'Audiowide', cursive;
-}
-
-.navBar a {
-  text-decoration: none;
+h1 {
+  font-family: "Bungee Shade";
+  padding-top: 50px;
+  text-align: center;
   color: white;
-  padding:15px;
+  padding-bottom: 25px;
 }
 
-.navBar a:hover {
-  background-color: #ff66c4;
-  color: #f6f6f6;
-  padding: 12px 16px;
+.barImg {
+  padding-top: 25px;
 }
-
-/* NAV BAR DROP DOWN */
-
-.dropdownBtn {
-  border: none;
+.card {
+  background-color: white;
+  border-radius: 20px;
+  border-color: transparent;
 }
-
-.dropdown {
-  position: relative;
-  display: inline-block;
-  padding: 15px;
-}
-
-.dropdown-content {
-  display: none;
-  position: absolute;
-  background-color: #ffde59;
-  color: #ff66c4;
-  min-width: 160px;
-  box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
-  z-index: 1;
-}
-
-.dropdown-content a {
-  color: #ff66c4;
-  padding: 12px 16px;
-  text-decoration: none;
-  display: block;
-}
-
-.dropdown-content a:hover {
-  background-color: #ff66c4;
-  color: #f6f6f6;
-}
-
-.dropdown:hover .dropdown-content {
-  display: block;
-}
-
-.dropdown:hover .dropdownBtn {
-  background-color: #ff66c4;
-  color: white;
-}
-
-/* RESPONSIVE TO SMALLER SCREENS  */
-@media screen and (max-width: 768px) {
-  .grid-container { 
-    grid-template-columns: 1fr; /* Use a single column for smaller screens */
-  }
-
-}
-
-/*FAQs image*/
-
-.campsiteImg {
+.card-img-top {
+  width: 100%;
+  height: auto;
   max-width: 100%;
+  padding: 15px;
+  border-radius: 20px;
+}
+.section1 {
+  font-family: "audiowide", cursive, bold;
+  padding-left: 20px;
+  padding-right: 20px;
 }
 .container {
-  position: relative;
+  font-family: "audiowide", cursive, bold;
+  text-align: center;
+  padding-top: 30px;
+  padding-bottom: 30px;
 }
-.text-block {
-  position: absolute;
-  bottom: 35%;
-  right: 35%;
-
-  color: white;
-}
-
-/* FAQs Accordian*/
-
-.accordian {
-  width: 80% !important;
-  z-index: 1;
-}
-.accordian-item {
-  width: 80% !important;
-  z-index: 1;
-}
-
-.accordian-header {
-  width: 80% !important;
-  z-index: 1;
-}
-
-.accordian-button {
-  width: 80% !important;
-  z-index: 1;
-}
-
-.accordion-collapse {
-  width: 80% !important;
-  z-index: 1;
-}
-
-.accordian-body {
-  width: 80% !important;
-  z-index: 1;
-}
-
-/* FOOTER */
-
-footer {
-  bottom: 3vh;
-  width: 100%;
-  height: 18vh;
-  background: #0101019a;
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-  z-index: 0; /* Above Footer Marquee */
-}
-
-#Column1 {
-    color: white;
-    font-family: 'Audiowide', cursive;
-    font-size: small;
-    width: 50%;
-    padding: 1em;
-}
-
-#Column1 li {
-    list-style-type: none;
-}
-
-#Column2 {
-    color: white;
-    font-family: 'Audiowide', cursive;
-    width: 50%;
-    padding: 1em;
-    justify-content: space-between;
-    text-align: right; /* Align text to the right within Column2 */
-}
-
-#Column2 ul {
-    list-style-type: none;
-    padding: 0;
-    margin: 0;
-}
-
-#Column2 ul li {
-    display: inline-block; /* Make the list items side by side */
-    margin-right: 10px; /* Add some spacing between the list items */
-}
-
-#Footer-Marquee {
-    position: fixed;
-    bottom: 0;
-    width: 100%; /* Make it span the entire width */
-    background-color: black;
-    color: #ffde59;
-    font-family: 'Audiowide', cursive;
-    white-space: nowrap; /* Prevent text from wrapping */
-    overflow: hidden; /* Hide overflowing content */
-    display: block;
-    height: 3vh;
-  }
