--- a/style2.css
+++ b/style2.css
@@ -34,8 +34,7 @@ header {
 
   padding-top: 2em;
   padding-bottom: 15px;
-
-
+}
 
 .navBar {
   display: flex;
@@ -219,5 +218,5 @@ header {
 }
 
 footer {
-  background-color: #ff66c3;
+  background-color: #ff66c4;
 }
